--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
