--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@uiw/react-color-block": "^2.3.2",
+    "@uiw/react-color-chrome": "^2.3.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.8",
     "jwt-decode": "^4.0.0",
